--- a/recipes/tortillas.html
+++ b/recipes/tortillas.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -15,7 +15,7 @@
                <ul>
                   <li>12 eggs</li> 
                   <li>⅓ cup milk  </li>
-                  <li>s3 slices cooked ham, diced</li>
+                  <li>3 slices cooked ham, diced</li>
                   <li>2 green onions, minced</li>
                   <li>salt and pepper to taste</li>
                   <li>4 ounces Cheddar cheese, shredded</li>
