--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
            </h1> 
            <ul>
                <li><a href="recipes/lasagna.html">Lasagna</a></li>
-               <li><a href="recipes/tortillas.html">Tortillas</a></li>            
+               <li><a href="recipes/tortillas.html">Tortillas</a></li>
+               <li><a href="recipes/pork-ribs.html">Pork Ribs</a></li>          
            </ul>
         </body>
     </head>
