--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="styles.css">    
         <meta charset="utf-8">
         <title>Recipes</title>
         <body>
@@ -12,6 +13,7 @@
                <li><a href="recipes/tortillas.html">Tortillas</a></li>
                <li><a href="recipes/pork-ribs.html">Pork Ribs</a></li>          
            </ul>
+           <button>Like!</button>
         </body>
     </head>
 </html>
